fix: Integer.parseInt로 인한 버그 수정
Integer.parseInt로 인해 "001234" -> 1234로 저장됨